<resources>
    <string name="app_name">EvoCity</string>
    <string name="Name">Usuário</string>
    <string name="Password">Senha</string>
    <string name="RepeatPassword">Repetir Senha</string>
    <string name="Login">Login</string>
    <string name="conectado">Manter-se conectado</string>
    <string name="Nome">Nome</string>
    <string name="Email">Email</string>
    <string name="Salvar">Salvar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="EventName">Nome Evento</string>
    <string name="Data">Data</string>
    <string name="Hora">Hora</string>
    <string name="LocalPartida">Local de Partida</string>
    <string name="LocalDestino">Local de Destino</string>
    <string name="Endereco">Endereço</string>
    <string name="Obs">Observação</string>


    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_mapa">Map</string>
    <string name="buscar">Buscar ...</string>
</resources>
